fix: desktop paddings, line heights, scrollbar visibility

--- a/assets/css/webcodr.css
+++ b/assets/css/webcodr.css
@@ -634,11 +634,12 @@ h6 {
 	border-radius: 0;
 	font-family: var(--monospace-font);
 	font-size: 18px;
-	line-height: 1.5em;
 	overflow-x: auto;
-	scrollbar-color: var(--code-scrollback-background-color)
-		var(--code-background-color);
-	scrollbar-width: thin;
+	scrollbar-width: none;
+
+  .line {
+    line-height: 1.5em;
+  }
 }
 .post-content p code,
 .post-content ul code,
@@ -770,7 +771,7 @@ h6 {
 	.post-content .highlight {
 		--code-surface-bleed: min(32px, max(0px, calc((100cqw - 800px) / 2)));
 		margin-inline: calc(-1 * var(--code-surface-bleed));
-		padding: 32px;
+		padding: 24px 32px;
 		padding-inline: var(--code-surface-bleed);
 		border-radius: 5px;
 	}
@@ -778,7 +779,7 @@ h6 {
 		padding-left: 0;
 	}
 	.post-content--copy {
-		margin-top: -22px;
+		margin-top: -12px;
 		margin-right: calc(-1 * min(22px, var(--code-surface-bleed)));
 	}
 
